[metadata]
name = brails
version = attr: brails.__version__
#author = Claudio M. Perez
#author_email = claudio_perez@berkeley.edu
description = brails
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NHERI-SimCenter/BRAILS
license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

keywords = 
    seismic
    earthquake
    parser
 
[options]
package_dir = 
    = src
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    numpy >= 1.19
    scipy
    pyyaml
    anabel

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
testing =
    # upstream
    pytest >= 4.6
    pytest-checkdocs >= 2.4
    pytest-flake8
    pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version < "3.10"
    pytest-cov
    # python_version: workaround for python/typed_ast#156
    pytest-mypy; python_implementation != "PyPy" and python_version < "3.10"
    pytest-enabler >= 1.0.1
    pandas


[flake8]
max-line-length = 88
extend-ignore = 
   E251
   E252 # whitespace around parameter equals
   E128 # Continuation underindented for visual indent
select = B,C,E,F,W,T4,B9

